Fixed the collapsing menus.

--- a/docroot/sites/all/themes/ambitious/sass/layouts/caption-text.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/caption-text.scss
@@ -85,8 +85,10 @@
 		}
 		// Title 01
 		.caption-text-title-1{
+
 			margin-top: 10px;
 			margin-right: 20px;
+
 			@include breakpoint($mobile){
 				// 768px -
 				margin-left: 90px;
@@ -104,6 +106,10 @@
 		}
 		// Title 02
 		.caption-text-title-2{
+
+			// prevents the captions from collapsing when the menu slides out.
+			display: block;
+
 			margin-top: 10px;
 			
 			@include breakpoint($not-all-mobile){
